# rust-sqlx

./: .gitignore  Cargo.toml  README.md  psql.txt  psql_helper.txt
migrations/: 0001_books_table.sql  0002_books_table.sql  0003_books_table.sql
src/: dweet.rs  hello_mod.rs  llm_chain.rs  llm_chain_original.rs  main.rs  scoreboard.rs  sql_listener.rs  sql_listener_orig.rs  sql_listerner_cannel_tx.rs  teratemplates.rs
static/: htmx.html  index.html  indexnew.html  main.css  nextproject.html  other.html
templates/: edit.html  index.html  layout.html
