[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
futures = "0.3"
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"

#run like: cargo run-script hello
[package.metadata.scripts]
hello = "echo Goodbye"
connectdb = 'PGPASSWORD="password" psql -U user -h host -p port db_name'