[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
futures = "0.3"
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-cors = "0.7.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
webbrowser = "1.0.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] } 
bytes = "1.0"
async-std = "1.12.0"
actix-web-actors = "4.3.0"
tokio-stream = "0.1.15"
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["full"] }



#connect to your Postgrs Server like: cargo run-script connectdb (https://crates.io/crates/cargo-run-script)
[package.metadata.scripts]
hello = "echo Goodbye"
connectdb = 'PGPASSWORD="password" psql -U user -h host -p port db_name'
